# job-search-ai

./: .mcp.json  CLAUDE.md  OPENER.md  PROGRESS.md  README.md  _nul  job-hunt.config.yaml  note-for-claude.txt  package-lock.json  pyproject.toml  watcher.py
.claude/: settings.json
.jh/: watch_inbox.py
.jh/queue/: active-session.json  inbox-session-20260526-230607.json  inbox-session-20260526-233349.json  inbox-session-20260529-233345.json  inbox-session-20260529-235335.json  inbox-session-20260529-235900.json  inbox-session-20260530-001629.json  inbox-session-20260530-210158.json  inbox-session-20260530-211604.json  inbox-session-20260530-211815.json  inbox-session-20260530-212242.json  inbox-session-20260531-124842.json  inbox-session-20260531-125213.json  inbox-session-20260603-205746.json  inbox-session-20260603-211904.json  inbox-session-20260603-212939.json  outbox-session-20260526-230607.jsonl  outbox-session-20260526-233349.jsonl  outbox-session-20260529-233345.jsonl  outbox-session-20260529-235335.jsonl  outbox-session-20260529-235900.jsonl  outbox-session-20260530-001629.jsonl  outbox-session-20260530-211815.jsonl  outbox-session-20260531-104920.jsonl  outbox-session-20260531-114410.jsonl  status.json
data-storage/companies/: intertech.md  jobot.md  tags.json
docs/: DOCS_STATUS.md  architecture.md  data-entry-channels.md  instruction.md  job-hunt-ai-workflows.md  job-hunt-implementation-roadmap.md  job-hunt-system-architecture.md  job-hunt-system-roadmap.md  mental-model.md
old/: package.json
old/src/: ScoreJob.txt  (+1 more)
src/: server.py  watcher.py
(+57 files in other folders)
